--- a/user_logout.html
+++ b/user_logout.html
@@ -6,7 +6,7 @@
     <title> Phụ Kiện Điện Thoại</title>
     <link rel="stylesheet" href="css/user.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-
+   
 </head>
 <body>
     <header>
@@ -31,9 +31,8 @@
                       <i class="fas fa-phone" style="color: white; margin-right: 6px;"></i>
                       Liên Hệ</a></li>
 
-                  <li><a href="#orders" onclick="showSection('orders'); fetchOrders();">
-                      <i class="fas fa-receipt" style="color: white; margin-right: 6px;"></i>
-                      Đơn Hàng</a></li>
+                  <li><a href="orders/orders.html"><i class="fas fa-receipt" style="color: white; margin-right: 6px;"></i> Đơn Hàng </a></li>
+
                   
                 <li><a href="#" onclick="logout()">
                       <i class="fas fa-user fa-lg" style="color: white; margin-right: 6px;"></i>
