Update kho sản phẩm

--- a/orders/orders.html
+++ b/orders/orders.html
@@ -15,7 +15,10 @@
     <div id="status-filters" class="flex flex-wrap justify-center gap-2 mb-6"></div>
 
     <!-- Danh sách đơn hàng -->
-    <div id="order-list" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6"></div>
+<div id="order-list" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 
+    max-h-[70vh] overflow-y-auto p-2 bg-gray-50 rounded">
+</div>
+
 </main>
 
 <footer class="bg-gray-800 text-white p-4 text-center text-sm">
