--- a/user_logout.html
+++ b/user_logout.html
@@ -38,9 +38,7 @@
     </header>
 
     <main>
-        <section id="home">
-            <h2>Chào Mừng Đến Với Cửa Hàng Chúng Tôi! </h2>
-        </section>
+        <section id="home">   </section>
      
            <section id="products">
     <div class="filter-bar">
