--- a/user_logout.html
+++ b/user_logout.html
@@ -59,13 +59,18 @@
   <section id="contact" style="display:none;">
     <h2>Liên Hệ</h2>
     <form id="contact-form">
-      <label for="name">Tên:</label><input type="text" id="name" required>
-      <label for="email">Email:</label><input type="email" id="email" required>
-      <label for="phone">Số điện thoại:</label><input type="tel" id="phone" required>
-      <label for="message">Nội dung:</label><textarea id="message" required></textarea>
+      <label for="name">Tên:</label>
+      <input type="text" id="name" name="name" required>
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" required>
+      <label for="phone">Số điện thoại:</label>
+      <input type="tel" id="phone" name="phone" required>
+      <label for="message">Nội dung:</label>
+      <textarea id="message" name="message" required></textarea>
       <button type="submit">Gửi</button>
     </form>
-  </section>
+</section>
+
 
   <div id="notification"></div>
 </main>
