Chỉnh sửa giao diện và code

--- a/user.html
+++ b/user.html
@@ -111,6 +111,7 @@
     </section>
 
     <div id="notification"></div>
+
 </main>
 
 
@@ -150,9 +151,9 @@
     </div>
 </footer>
 
-<a href="#" id="zalo-float"><img src="admin/uploads/download.png" alt="Chat Zalo" class="zalo-icon"></a>
-<a href="#" id="messenger-float"><img src="admin/uploads/mess.jpg" alt="Chat Messenger" class="messenger-icon"></a>
-
+<!-- Chat Zalo & Messenger -->
+<a href="https://zalo.me/0587911287" target="_blank" id="zalo-float"><img src="admin/uploads/download.png" alt="Chat Zalo" class="zalo-icon"></a>
+<a href="javascript:void(0);" id="messenger-float" onclick="toggleChatBox()"><img src="admin/uploads/mess.jpg" alt="Chat Messenger" class="messenger-icon"></a>
 
 
 <script src="js/new.js"></script>
