--- a/user/user_logout.html
+++ b/user/user_logout.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mobile Gear</title>
-  <link rel="stylesheet" href="../css/user.css">
+  <link rel="stylesheet" href="css/user.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
@@ -155,7 +155,16 @@
 </div>
 
 
-<script src="../js/function.js"></script>
+<script src="js/profile.js"></script>
+<script src="js/chat.js"></script>
+<script src="js/pay.js"></script>
+<script src="js/contact.js"></script>
+<script src="js/logout.js"></script>
+<script src="js/main.js"></script>
+<script src="js/search.js"></script>
+<script src="js/home.js"></script>
+<script src="js/cart.js"></script>
+<script src="js/products_detail.js"></script>
 
 </body>
 </html>
