--- a/user/user.html
+++ b/user/user.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mobile Gear</title>
-    <link rel="stylesheet" href="../css/user.css">
+    <link rel="stylesheet" href="css/user.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
@@ -156,6 +156,12 @@
 <a href="javascript:void(0);" id="messenger-float" onclick="toggleChatBox()"><img src="../admin/uploads/mess.jpg" alt="Chat Messenger" class="messenger-icon"></a>
 
 
-<script src="../js/new.js"></script>
+<script src="js/notification.js"></script>
+<script src="js/main.js"></script>
+<script src="js/search.js"></script>
+<script src="js/home.js"></script>
+<script src="js/no_feedback.js"></script>
+<script src="js/cart.js"></script>
+<script src="js/register_login.js"></script>
 </body>
 </html>
