--- a/user/user.html
+++ b/user/user.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mobile Gear</title>
-    <link rel="stylesheet" href="css/user.css">
+  <link rel="stylesheet" href="css/user.css">
+  <link rel="stylesheet" href="css/chat.css">
+  <link rel="stylesheet" href="css/footer.css">
+  <link rel="stylesheet" href="css/home.css">
+  <link rel="stylesheet" href="css/products.css">
+  <link rel="stylesheet" href="css/register_login.css">
+  <link rel="stylesheet" href="css/cart.css">
+  <link rel="stylesheet" href="css/features_products.css">
+  <link rel="stylesheet" href="css/search.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
