Chỉnh giao diện

--- a/user/user_logout.html
+++ b/user/user_logout.html
@@ -23,7 +23,7 @@
   <h1>Mobile Gear</h1>
   <nav>
     <ul>
-      <li><a href="#home" onclick="showSection('home')">Trang Chủ</a></li>
+      <li> <a href="#home" onclick="showSection('home')"><i class="fa fa-home"></i> Trang Chủ </a></li>
       <li><a href="#products" onclick="showSection('products')"><i class="fas fa-box"></i> Sản Phẩm</a></li>
       <li><a href="#cart" onclick="showSection('cart')"><i class="fas fa-shopping-cart"></i> Giỏ Hàng (<span id="cart-quantity">0</span>)</a></li>
       <li><a href="#contact" onclick="showSection('contact')"><i class="fas fa-phone"></i> Liên Hệ</a></li>
