Sửa trạng thái đơn hàng của user và thông báo đến shipper

--- a/user/orders/orders.html
+++ b/user/orders/orders.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Đơn Hàng - Mobile Gear</title>
+<link rel="stylesheet" href="orders.css">
 <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100 min-h-screen flex flex-col">
@@ -19,6 +20,7 @@
     max-h-[70vh] overflow-y-auto p-2 bg-gray-50 rounded">
 </div>
 
+
 </main>
 
 <footer class="bg-gray-800 text-white p-4 text-center text-sm">
@@ -27,7 +29,7 @@
 
 
 
-<script src="orders.js"></script>
-
+<script src="function.js"></script>
+<script src="products.js"></script>
 </body>
 </html>
