--- a/user/orders/orders.html
+++ b/user/orders/orders.html
@@ -29,7 +29,7 @@
 
 
 
-<script src="function.js"></script>
-<script src="products.js"></script>
+<script src="js/function.js"></script>
+<script src="js/products.js"></script>
 </body>
 </html>
