--- a/user/user_logout.html
+++ b/user/user_logout.html
@@ -33,8 +33,8 @@
              <a href="#" id="account-btn"><i class="fas fa-user"></i> Tài Khoản</a>
                <ul class="account-dropdown" id="account-dropdown">
                 <li><a href="#" id="profile-btn">Thông tin cá nhân</a></li>
-             <li><a href="orders/orders.html">Đơn Hàng</a></li>
-            <li><a href="#" onclick="logout()">Đăng Xuất</a></li>
+                <li><a href="orders/orders.html" class="order-link"> Đơn Hàng<span id="order-alert" class="order-alert hidden">❗</span> </a></li>
+               <li><a href="#" onclick="logout()">Đăng Xuất</a></li>
                </ul>
        </li>
   </nav>
@@ -168,7 +168,7 @@
   </div>
 </div>
 
-
+<script src="js/check_orders.js"></script>
 <script src="js/profile.js"></script>
 <script src="js/chat.js"></script>
 <script src="js/pay.js"></script>
