--- a/user/orders/orders.html
+++ b/user/orders/orders.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Đơn Hàng - Mobile Gear</title>
-<link rel="stylesheet" href="orders.css">
+<link rel="stylesheet" href="css/orders.css">
 <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100 min-h-screen flex flex-col">
