--- a/user/user.html
+++ b/user/user.html
@@ -66,7 +66,7 @@
 
     <div id="login-section" class="container" style="display:none;">
         <h1>Đăng Nhập</h1>
-        <form id="login-form" class="form" method="POST" action="user_login.php">
+        <form id="login-form" class="form" method="POST" action="login.php">
             <div class="form-group">
                 <label for="login-name">Tên:</label>
                 <input type="text" id="login-name" name="login-name" required>
@@ -88,7 +88,7 @@
 
     <div id="register-section" class="container" style="display:none;">
         <h2>Đăng Ký</h2>
-        <form id="register-form" class="form" method="POST" action="user_register.php">
+        <form id="register-form" class="form" method="POST" action="register.php">
             <div class="form-group">
                 <label for="register-name">Tên:</label>
                 <input type="text" id="register-name" name="register-name" required>
