Sửa lỗi đánh giá

--- a/user/user.html
+++ b/user/user.html
@@ -55,13 +55,13 @@
     </section>
 
 
-    <section id="cart">
-        <h2>Giỏ Hàng</h2>
-        <div id="cart-items"></div>
-        <div id="total-quantity">Tổng số sản phẩm: 0</div>
-        <div id="total-price">Tổng giá trị: 0 VNĐ</div>
-        <button id="checkout" style="display:none;" onclick="checkout()">Đặt hàng</button>
-    </section>
+  <section id="cart">
+    <h2>Giỏ Hàng</h2>
+    <div id="cart-items"></div>
+    <div id="total-quantity">Tổng số sản phẩm: 0</div>
+    <div id="total-price">Tổng giá trị: 0 VNĐ</div>
+   <button id="checkout" style="display: none;" onclick="checkout()">Đặt hàng</button>
+  </section>
 
 
     <div id="login-section" class="container" style="display:none;">
@@ -167,6 +167,7 @@
 <script src="js/notification.js"></script>
 <script src="js/main.js"></script>
 <script src="js/search.js"></script>
+<script src="js/cart.js"></script>
 <script src="js/home.js"></script>
 <script src="js/no_feedback.js"></script>
 <script src="js/register_login.js"></script>
