Sửa đánh giá sản phẩm và xem chi tiết sản phẩm

--- a/user/user.html
+++ b/user/user.html
@@ -169,7 +169,7 @@
 <script src="js/search.js"></script>
 <script src="js/cart.js"></script>
 <script src="js/home.js"></script>
-<script src="js/no_feedback.js"></script>
+<script src="js/products_detail.js"></script>
 <script src="js/register_login.js"></script>
 </body>
 </html>
