--- a/user/user.html
+++ b/user/user.html
@@ -9,10 +9,12 @@
   <link rel="stylesheet" href="css/footer.css">
   <link rel="stylesheet" href="css/home.css">
   <link rel="stylesheet" href="css/products.css">
+    <link rel="stylesheet" href="css/menu.css">
   <link rel="stylesheet" href="css/register_login.css">
   <link rel="stylesheet" href="css/cart.css">
   <link rel="stylesheet" href="css/features_products.css">
   <link rel="stylesheet" href="css/search.css">
+  <link rel="stylesheet" href="css/contact.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
@@ -23,7 +25,28 @@
             <li> <a href="#home" onclick="showSection('home')"><i class="fa fa-home"></i> Trang Chủ </a></li>
             <li><a href="#products" onclick="showSection('products')"><i class="fas fa-box"></i> Sản Phẩm</a></li>
             <li><a href="#cart" onclick="showSection('cart')"><i class="fas fa-shopping-cart"></i> Giỏ Hàng (<span id="cart-quantity">0</span>)</a></li>
-            <li><a href="#login" onclick="showSection('login')"><i class="fas fa-right-to-bracket"></i> Đăng Nhập</a></li>
+               <li><a href="#contact" onclick="showSection('contact')"><i class="fas fa-phone"></i> Liên Hệ</a></li>
+           <li id="login-menu">  <a href="#login" onclick="showSection('login')"> <i class="fas fa-right-to-bracket"></i> Đăng Nhập </a></li>
+
+            <li class="account-menu hidden" id="account-menu">
+    <a href="#" id="account-btn">
+        <i class="fas fa-user"></i> Tài Khoản
+        <span id="account-order-alert" class="order-alert hidden">❗</span>
+    </a>
+
+    <ul class="account-dropdown" id="account-dropdown">
+        <li><a href="#" id="profile-btn">Thông tin cá nhân</a></li>
+
+        <li>
+            <a href="orders/orders.html" class="order-link">
+                Đơn Hàng <span id="order-alert" class="order-alert hidden">❗</span>
+            </a>
+        </li>
+
+        <li><a href="#" onclick="logout()">Đăng Xuất</a></li>
+    </ul>
+</li>
+
         </ul>
     </nav>
 </header>
@@ -117,9 +140,50 @@
             <button type="submit">Gửi</button>
         </form>
     </section>
+      
+    <section id="profile-section">
+    <div class="modal-content">
+        <form id="profile-form">
+            <h2>Thông tin cá nhân</h2>
+
+            <label for="profile-name">Tên:</label>
+             <input type="text" id="profile-name" name="name" readonly class="disabled-input">
+
+             <label for="profile-email">Email:</label>
+             <input type="email" id="profile-email" name="email" readonly class="disabled-input">
+
+
+            <label for="profile-phone">Số điện thoại:</label>
+            <input type="tel" id="profile-phone" name="phone">
+
+            <label for="profile-address">Địa chỉ:</label>
+            <input type="text" id="profile-address" name="address">
+
+            <button type="submit">Cập nhật</button>
+            <button type="button" onclick="closeProfile()">Đóng</button>
+        </form>
+    </div>
+</section>
+   
+
+
+<!-- CHAT BOX -->
+<div id="messenger-box" style="display:none">
+    <div class="chat-header">
+        <span>Hỗ trợ Khách Hàng</span>
+        <button id="close-messenger">✖</button>
+    </div>
+
+    <div id="messenger-messages"></div>
+
+    <div class="chat-input">
+        <input type="text" id="messenger-input" placeholder="Nhập tin nhắn...">
+        <button id="send-messenger">Gửi</button>
+    </div>
+</div>
 
     <div id="notification"></div>
-
+       
 </main>
 
 
@@ -161,15 +225,25 @@
 
 <!-- Chat Zalo & Messenger -->
 <a href="https://zalo.me/0587911287" target="_blank" id="zalo-float"><img src="../admin/uploads/download.png" alt="Chat Zalo" class="zalo-icon"></a>
-<a href="javascript:void(0);" id="messenger-float" onclick="toggleChatBox()"><img src="../admin/uploads/mess.jpg" alt="Chat Messenger" class="messenger-icon"></a>
+<!-- FLOAT BUTTON -->
+<a href="javascript:void(0);" id="messenger-float">
+    <img src="../admin/uploads/mess.jpg" class="messenger-icon">
+    <span id="messenger-badge" class="chat-badge" style="display:none">1</span>
+</a>
 
 
+<script src="js/check_login.js"></script>
 <script src="js/notification.js"></script>
+<script src="js/chat.js"></script>
+<script src="js/pay.js"></script>
 <script src="js/main.js"></script>
+<script src="js/contact.js"></script>
+<script src="js/logout.js"></script>
 <script src="js/search.js"></script>
 <script src="js/cart.js"></script>
 <script src="js/home.js"></script>
 <script src="js/products_detail.js"></script>
+<script src="js/profile.js"></script>
 <script src="js/register_login.js"></script>
 </body>
 </html>
